--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,50 +5,36 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
-
 a {
   color: inherit;
   text-decoration: none;
 }
-
 * {
   box-sizing: border-box;
 } */
-
-
-
-.custom_heading{
-  font-family: "Lato",sans-serif;
+.custom_heading {
+  font-family: "Lato", sans-serif;
   font-weight: bold;
-  color:grey;
+  color: grey;
 }
-
 /* https://www.youtube.com/watch?v=hLlcabNjeFM&t=647s */
-
-
-.add_border{
-
+.add_border {
   border: 1px solid #efefef !important;
 }
-
-
-.frame-container{
-   
+.frame-container {
   position: relative;
   overflow: hidden;
   width: 100%;
-  padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
-
+  padding-top: 56.25%;
+  /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
   /* padding-inline: 60px; */
 }
-
-
 .responsive-iframe {
-position: absolute;
-top: 0;
-left: 0;
-bottom: 0;
-right: 0;
-width: 100%;
-height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
 }
