added youtube api

--- a/styles/worship.css
+++ b/styles/worship.css
@@ -48,6 +48,8 @@
 	color:rgb(174, 174, 174);
 	font-family: 'Lato';
 	font-weight: bold !important;
+	display: flex;
+    align-items: center;
 }
 .view_youtube{
 	background-color: red !important;
